# pv-stats

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml
config/: settings.toml
devops/common/: poetry.Dockerfile  poetry.Dockerfile.dockerignore
devops/dev/: .dockerignore  Dockerfile
pv_stats/: analyze_pv_installation.py  enegy_per_city.py  land_use.py  map_electricity_coverage.py
pv_stats/config/: config.py  validators.py
pv_stats/constants/: siose_constants.py  system_constants.py
pv_stats/ree/: ree_api.py  ree_demanda_api.py
pv_stats/utils/: df_processing.py  io_utils.py
scripts/: get_ree_demand.py  get_ree_generation.py  transform_land_use_categories.py
src/fotovoltaica-madrid/: land_use.py
src/fotovoltaica-madrid/config/: config.py
src/fotovoltaica-madrid/utils/: io_utils.py
src/pv-stats/: enegy_per_city.py
src/pv-stats/config/: validators.py
tests/ree/: test_date_parser.py  test_throttle_request.py
