[tool.poetry]
name = "fotovoltaica-madrid"
version = "0.1.0"
description = "Module to calculate the photovoltaics needs of the Community of Madrid."
authors = ["Adrián Rodríguez Grillo"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/adrigrillo/pv-stats"
packages = [
    { include = "pv_stats" }
]

[tool.poetry.dependencies]
python = "^3.11"
dynaconf = "^3.2.5"
loguru = "^0.7.2"
geopandas = "^0.14.3"
requests = "^2.31.0"
typer = "^0.12.1"
openpyxl = "^3.1.3"
matplotlib = "^3.9.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
